--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://root:pass@localhost:5432/shopping_card_db?schema=public"
+CLIENT_URL="http://localhost:3001"
+SCHEMA_PATH="src/schema.graphql"
